--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--JUAN CAMILO GONZALEZ BERRIO
+COD: 1735277-2711
+-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +12,7 @@
 
 
     <ImageView
-        android:id="@+id/ibPhoto"
+        android:id="@+id/ivPhoto"
         android:layout_width="@dimen/photoSize"
         android:layout_height="@dimen/photoSize"
         android:layout_marginStart="32dp"
@@ -28,7 +31,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.265"
-        app:layout_constraintStart_toEndOf="@+id/ibPhoto"
+        app:layout_constraintStart_toEndOf="@+id/ivPhoto"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
